[package]
name = "nwtzui"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
chrono = "0.4.40"
nwtzlang = { git = "https://github.com/nyutiz/nwtzlang.git"}
tokio = { version = "1.45.0", features = ["full"] }
egui_inbox = "0.8.0"

# Dans glob1env pouvoir copier-coller des textes avec un bouton a coté <-> entre nwtzlang et ui
# Option dans settings pour cacher / afficher les extensions